css/styles.css
/* ... */
/* General */
* {
    box-sizing: border-box;
}
/* -Links */
a {
    /* border-bottom: 1px solid #3b5954; */
    color: var(--primary-color);
    font-size: var(--primary-font-size);
    line-height: 130%;
    text-decoration: none;
}
a:not(.nav__link):not(.btn):focus,
a:not(.nav__link):not(.btn):hover {
    text-decoration: underline;
}
a:not(.nav__link):visited {
    color: #1bbc87;
}  
a:active {
    color: #ff998a;
}
/* - */
body {    
    background-color: #f9f9f9;
    color: var(--primary-text-color);
    font-family: var(--primary-font);
    font-size: var(--primary-font-size);
    line-height: 200%;
    position: relative;
}
body,
html {
    min-height: 100vh;
}
html {
    font-size: 100%;
}
/* -Headers */
h1 {
    font-size: 1.875rem; /* 28px */
}
h2 {
    font-size: 1.625rem; /* 26px */
}
h3 {
    font-size: 1.5rem; /* 24px */
}
h4 {
    font-size: 1.375rem; /* 22px */
}
h5 {
    font-size: 1.25rem; /* 20px */
}
h6 {
    font-size: 1.125rem; /* 18px */
}
/* - */
main {
    line-height: 200%;
    margin: 100px auto;
    max-width: 100%;
    min-height: 100%;
    padding: var(--main-padding);
    width: 1000px;
}
p {
    font-size: var(--primary-font-size);
    line-height: 140%;
}
/* -Section */
.section-heading {
    /* background-color: var(--dark-gray-color);
    color: #fff; */
    color: var(--dark-gray-color);
    /* padding: var(--main-padding);
    text-shadow: 1px 1px 1px #000; */
}
section {
    margin: auto;
    /* max-width: 100%;
    width: 80%; */
}
section > * {
    margin-top: 0;
}
/* -Common Classes */
.page-title {
    border-bottom: 2px solid var(--primary-color);
    color: var(--primary-color); 
    font-family: var(--secondary-font);   
    padding-bottom: var(--main-padding);    
    text-align: center;
}
/* --Buttons */
.btn {
    background-color: var(--primary-color);
    border: 1px solid var(--primary-color);
    border-radius: var(--main-border-radius);
    color: #fff;
    display: block;
    font-family: inherit;
    font-size: var(--primary-font-size);
    padding: var(--main-padding);
    text-decoration: none;
    transition: opacity 0.3s;
}
.btn:focus,
.btn:hover {
    cursor: pointer;
    opacity: 0.7;
}
/* --Form Container */
.form__container--inline {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: var(--main-margin);
    width: 100%;
}
.form__container--inline input {
    height: 20px;
    width: var(--inline-form-field-width);
}
.form__container--inline label {
    width: 20%;
}
.form__container--inline textarea {
    width: var(--inline-form-field-width);
}
/* --Grid */
/* start grid fallback */
.grid__item {
    display: inline-block;
    max-width: 100%;
    width: 33%;
}
/* end grid fallback */
@supports (display: grid) {
    .grid {
        display: grid;
        grid-gap: var(--main-margin);
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
    .grid__item {
        border: 1px solid var(--primary-text-color);
        border-radius: 3px;
        background-color: #fff;
        color: var(--primary-text-color);
        padding: var(--main-padding);
        max-width: 100%;
        width: auto;
    }
}
/* -Nav */
.main-navigation {
    background-color: var(--primary-color);
    border-bottom-color: var(--primary-color);
    /* display: flex;
    flex-wrap: wrap;
    justify-content: space-between; */
    padding: var(--main-padding);
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}
.main-navigation a {
    color: #fff;
    padding: var(--main-padding);
}
.main-navigation a:not(.nav__link--active):hover {
    border-bottom: 1px solid #fff;
    padding-bottom: var(--small-element-padding);
}
.main-navigation li {
    flex: 0 1 60px;
    list-style: none;
    margin-left: var(--main-margin);
}
.main-navigation li:first-child {
    flex-grow: 1;
    font-family: var(--secondary-font);
    text-shadow: 1px 1px 2px var(--secondary-color);
    /* color: var(--secondary-color) !important; */
}
.main-navigation li:first-child a:hover {
    border-bottom: none;
    color: var(--secondary-color);
}
.main-navigation ul {
    display: flex;
    flex-wrap: wrap;
    /* justify-content: space-evenly; */
    margin: 0;
    padding-left: 0;
}
.main-navigation .nav__collapse-btn {
    background-color: #fff;
    border-radius: var(--main-border-radius);
    display: none;
    height: 40px;
    /* margin-left: 1em; */
    max-width: 100%;
    padding: var(--small-element-padding);
    width: 40px;
}
.main-navigation .nav__collapse-btn div {
    background-color: var(--primary-color);
    border-radius: var(--main-border-radius);
    height: 4px;
    /* margin: 3px; */
    /* width: 80%; */
}
.main-navigation .nav__link--active {
    background-color: #fff;
    color: var(--primary-color);
    font-weight: 700;
}
.main-navigation .nav__logo {
    border-bottom: 0;
    color: #fff;
    font-size: 1.625rem;
    font-weight: bold;
}
/* -Footer */
footer {
    background-color: var(--light-gray-color);
    /* bottom: 0; */
    clear: both;
    display: flex;
    flex-direction: column;
    padding: var(--main-padding) 0;
    position: sticky;
    text-align: center;
    top: 100%;
    width: 100%;
}
.social-icons a {
    border-bottom: none;
}
.social-icons a:first-child img {
    margin-left: 0;
}
.social-icons img {
    height: 30px;
    margin-left: var(--main-margin);
    width: 30px;
}
.social-icons img:hover {
    opacity: 0.6;
}

/* Pages */
/* -Home Page */
#profile {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    max-width: 100%;
    width: 700px;
}
#profile__portrait-container {
    margin-right: var(--main-margin);
    margin-top: 0;
    position: relative;
    /* width: 45%;  */
}
#profile__portrait-container .speech-bubble {
    background-color: #fff;
    border: 3px solid #000;
    border-radius: 50%;
    position: absolute;
}
/* ... */

